# picopass

./: .gitignore  readme.md
.github/workflows/: build-pico.yml
picopass-pico/: .clang-format  CMakeLists.txt  Makefile  btstack_config.h  main.c  setup.sh
picopass-pico/picopass/: picopass_adv.c  picopass_adv.h  picopass_bonded.c  picopass_bonded.h  picopass_config.h  picopass_gap.c  picopass_gap.h  picopass_led.c  picopass_led.h  picopass_log.c  picopass_log.h  picopass_secret.c  picopass_secret.h
